[gd_scene load_steps=5 format=3 uid="uid://ctysgi2gko8me"]

[ext_resource type="FontFile" uid="uid://df51vpd4jgbnn" path="res://Fonts/BrownieStencil-8O8MJ.ttf" id="1_0ytf3"]
[ext_resource type="Script" path="res://Scenes/pause_menu.gd" id="1_mal3h"]

[sub_resource type="FontVariation" id="FontVariation_3uriu"]
base_font = ExtResource("1_0ytf3")

[sub_resource type="FontVariation" id="FontVariation_qc8s5"]
base_font = ExtResource("1_0ytf3")

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mal3h")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.5
offset_top = -128.0
offset_right = 124.5
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Paused" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.795368, 0.715129, 0.313044, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_3uriu")
theme_override_font_sizes/font_size = 80
text = "Paused"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 26
text = "Resume"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 26
text = "Options"

[node name="Main Menu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 26
text = "Main Menu"

[node name="Panel" type="Panel" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -143.0
offset_top = -117.0
offset_right = 144.0
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="OptionsPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.515
anchor_right = 0.5
anchor_bottom = 0.515
offset_left = 299.0
offset_top = -159.72
offset_right = 528.0
offset_bottom = 160.28

[node name="HSlider" type="HSlider" parent="OptionsPanel"]
layout_mode = 0
offset_left = 27.0
offset_top = 80.0
offset_right = 199.0
offset_bottom = 96.0
min_value = -80.0
max_value = 0.0
value = -10.0

[node name="Label" type="Label" parent="OptionsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.5
offset_top = -141.0
offset_right = 137.5
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.795368, 0.715129, 0.313044, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_qc8s5")
theme_override_font_sizes/font_size = 24
text = "Music Volume"
horizontal_alignment = 1

[node name="Back" type="Button" parent="OptionsPanel"]
z_index = 10
z_as_relative = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.5
offset_top = 35.0
offset_right = 35.5
offset_bottom = 109.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.796078, 0.713726, 0.313726, 1)
theme_override_fonts/font = ExtResource("1_0ytf3")
theme_override_font_sizes/font_size = 30
text = "Back"
flat = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="OptionsPanel/Back" to="." method="_on_back_pressed"]
